--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <title>survey-report</title>
-    <link rel="stylesheet" href="http://at.alicdn.com/t/font_406091_il38hiqfu8.css">
+    <!-- <link rel="stylesheet" href="http://at.alicdn.com/t/font_406091_il38hiqfu8.css"> -->
   </head>
   <body>
     <div id="app"></div>
